resources/public/css/main.css
body {
    padding-top: 60px; /* sit below fixed header */
}
ul {
    list-style-type: none;
    margin-left: 0;
    padding-left: 0;
}
ul.pager {
    margin: 0 0 19px 0;
}
ul.pager li {
    margin-right: 12px;
}
pre {
    padding: 0;
}

#maps {
    margin-left: 10px;
}

#particles {
    position: absolute;
    left: 0;
    top: 0;
    bottom: 0;
    right: 0;
    z-index: -100;
}
#photos, #youtubes{
    text-align: center;
}

#photos img {
    max-width: 100%;
    min-height: 200px;
}

#ttt {
    text-align: center;
}
#ttt .square {
    border: 2px solid gray;
    font-family: sans-serif;
    font-size: 100px;
    font-weight: bold;
    height: 125px;
    line-height: 125px;
}

#youtubes #player {
    max-width: 100%;
}
#search-results {
    margin-top: 10px;
}
#youtubes-search #search-results div {
    position: relative;
}
#youtubes-search #search-results img {
    border: solid;
    height: 5em;
    margin-right: 10px;
    width: 8em;
}

